@@ -53,6 +53,24 @@ void LuaProxy::Camera::setY(double y) {
     SMBX_CameraInfo::setCameraY(m_index, y);
 }
 
+double LuaProxy::Camera::renderX()
+{
+    return SMBX_CameraInfo::Get(m_index)->x;
+}
+
+double LuaProxy::Camera::renderY()
+{
+    return SMBX_CameraInfo::Get(m_index)->y;
+}
+
+void LuaProxy::Camera::setRenderX(double renderX) {
+    SMBX_CameraInfo::Get(m_index)->x = renderX;
+}
+
+void LuaProxy::Camera::setRenderY(double renderY) {
+    SMBX_CameraInfo::Get(m_index)->y = renderY;
+}
+
 double LuaProxy::Camera::width()
 {
     return SMBX_CameraInfo::Get(m_index)->width;
@@ -61,4 +79,12 @@ double LuaProxy::Camera::width()
 double LuaProxy::Camera::height()
 {
     return SMBX_CameraInfo::Get(m_index)->height;
+}
+
+void LuaProxy::Camera::setWidth(double width) {
+    SMBX_CameraInfo::Get(m_index)->width = width;
+}
+
+void LuaProxy::Camera::setHeight(double height) {
+    SMBX_CameraInfo::Get(m_index)->height = height;
 }
