@@ -1,4 +1,5 @@
 v0.7.3 BETA
+  * Extended Camera class
   * Bugfix [LunaLua]: Cheat defines now don't reset.
   * Added registerCustomEvent, so you can create custom events from your APIs.
   * Added event onCameraUpdate and Camera.x, Camera.y is now writeable.
